--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,6 +7,8 @@ jobs:
     test-lint:
         name: Test Lint
         runs-on: ubuntu-latest
+        env:
+            ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
         steps:
             -   name: login to Docker HUb
                 uses: docker/login-action@v1
