--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,8 +1,8 @@
 ---
 name: checks
-
+    
 on: [push]
-
+    
 jobs: 
     test-lint:
         name: Test Lint
@@ -10,14 +10,14 @@ jobs:
         env:
             ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
         steps:
-            -   name: login to Docker HUb
+            -   name: Login to Docker Hub
                 uses: docker/login-action@v1
                 with:
                     username: ${{ secrets.DOCKERHUB_USER }}
                     password: ${{ secrets.DOCKERHUB_TOKEN}}
             -   name: Checkout
                 uses: actions/checkout@v3
-            -   name: Tezt
+            -   name: Test
                 run: docker-compose run --rm app sh -c "python manage.py test"
             -   name: Lint
                 run: docker-compose run --rm app sh -c "flake8"
