--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,9 +9,10 @@ jobs:
         runs-on: ubuntu-latest
         env:
             ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+            ACTIONS_ALLOW_UNSECURE_COMMANDS: true
         steps:
             -   name: Login to Docker Hub
-                uses: docker/login-action@v2
+                uses: docker/login-action@v3
                 with:
                     username: ${{ secrets.DOCKERHUB_USER }}
                     password: ${{ secrets.DOCKERHUB_TOKEN}}
